svc-z2.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx
  namespace: learn08
spec:
  selector:
    app: nginx
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
