ingress-z2.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-z2
  namespace: learn08
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - nginx
    secretName: web-tls
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-nginx
            port:
              number: 80
